# tcreate-expert-smart

./: .gitignore  Cargo.toml  README.md  prototype.py
scsi-read10/: Cargo.toml  build.rs
scsi-read10/src/: block_reader.rs  linux.rs  macos.rs  read10.rs  windows.rs
src/: main.rs  tcreate_expert_smart.rs
src/scsi_read10/: block_reader.rs  linux.rs  macos.rs  mod.rs  read10.rs  windows.rs
