[package]
name = "tcreate-expert-smart"
version = "0.1.0"
edition = "2021"
authors = ["Randomblock1 <randomblock1@pm.me>"]
license = "MIT"
repository = "https://github.com/randomblock1/tcreate-expert-smart"
readme = "README.md"
homepage = "https://randomblock1.com"
keywords = ["utility", "smart"]
categories = ["command-line-utilities"]
description = "A tool to read health data from TeamGroup T-CREATE SMART Expert microSD cards"

[dependencies]
anyhow = "1.0"
binrw = "0.15"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs", "ioctl", "uio"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
	"Win32_System_IO",
	"Win32_Foundation",
	"Win32_Storage_IscsiDisc",
] }

[target.'cfg(target_os = "linux")'.build-dependencies]
bindgen = "0.72"