[package]
name = "scsi-read10"
version = "0.1.0"
edition = "2021"
description = "A cross-platform SCSI read(10) library for Rust"
license = "MIT"

[dependencies]
anyhow = "1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs", "ioctl", "uio"] }

[target.'cfg(target_os = "linux")'.build-dependencies]
bindgen = "0.72"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Storage_IscsiDisc",
] }